// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrandEdit should call the passed drag function if provided when mouse down 1`] = `
<div
  className="rounded col-09 bg-col-09 border-col-09"
  draggable={true}
  key="brand8"
  onDragStart={[Function]}
>
  <FormTextInput
    fieldName="brand_name_8"
    onChange={[Function]}
    onClick={[Function]}
    placeholder="add new"
    value="e brand 8"
  />
  Supplier: 
  34
</div>
`;

exports[`BrandEdit shows new brand without supplier correctly 1`] = `
<div
  className="rounded col-epic bg-white border-epic"
  draggable={false}
  key="brand8"
  onDragStart={[Function]}
>
  <Icon
    as="i"
    name="add"
    onClick={[Function]}
  />
  <FormTextInput
    fieldName="brand_name_new"
    onChange={[Function]}
    onClick={[Function]}
    placeholder="add new"
    value="e brand 8"
  />
  Supplier: 
  unknown
</div>
`;
